--- a/lib_uikit/build.gradle
+++ b/lib_uikit/build.gradle
@@ -69,7 +69,9 @@ dependencies {
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //RecyclerView 通用Adapter
-    implementation "com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4"
+    implementation ("com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4"){
+        exclude group: 'com.github.CymChad'
+    }
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'com.google.code.gson:gson:2.8.6'
 }
