--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "28.0.0"
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "com.nh.commondemo"
@@ -47,6 +47,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
-//    implementation project(path: ":lib_uikit")
-    implementation 'com.github.mave-cgc:uikit:v0.0.3'
+    implementation project(path: ":lib_uikit")
+//    implementation 'com.github.mave-cgc:uikit:v0.0.4'
 }
