--- a/lib_uikit/build.gradle
+++ b/lib_uikit/build.gradle
@@ -7,7 +7,7 @@ group='com.github.CHENGC'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "28.0.0"
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 21
@@ -58,20 +58,23 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.0.0'
 
+    implementation 'com.android.support:multidex:1.0.2'
+    //noinspection GradleDependency
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    //RecyclerView 通用Adapter
-    implementation ("com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4"){
-        exclude group: 'com.github.CymChad'
-    }
+    //noinspection GradleDependency
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation 'com.google.code.gson:gson:2.8.6'
+    //RecyclerView 通用Adapter
+    //noinspection GradleDependency
+    implementation "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34"
+    implementation ("com.google.code.gson:gson:2.8.6"){
+        exclude group: 'com.google.code.gson'
+    }
+    //noinspection GradleCompatible
+//    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
